# hermes

./: .gitignore  CLAUDE.md  README.md  app.py  audio.py  discovery.py  extractors.py  hermes.spec  models.py  package-lock.json  package.json  pyproject.toml  reparse_images.py  youtube.py
.github/workflows/: build.yml  test.yml
assets/: icon.icns
e2e/: bookmarks.mjs  collections.mjs  demo-gif.mjs  discover.mjs  drag-drop-watch.mjs  harness.mjs  import.mjs  media-keys.mjs  queue-timer.mjs  screenshot.mjs  search.mjs
engines/: __init__.py  base.py  edge.py  kokoro.py  kokoro_mlx.py  piper.py  say.py
static/: app.js  style.css
static/css/: components.css  designs.css  layout.css  teleprompter.css  tokens.css
static/js/: api.js  app.js  bookmarks.js  confirm-modal.js  contextmenu.js  dashboard.js  discover.js  drag-drop.js  modal.js  player.js  queue.js  reader-highlight.js  search.js  settings.js  sidebar.js  sleep-timer.js  state.js  teleprompter.js  toast.js  utils.js
templates/: index.html
tests/: conftest.py  test_audio.py  test_discovery.py  test_engines.py  test_extractors.py  test_models.py  test_routes.py  test_youtube.py
