[project]
name = "hermes"
version = "0.1.0"
description = "Text-to-podcast desktop app for macOS"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "pymupdf>=1.27.2.3",
    "pysbd>=0.3.4",
    "python-docx>=1.2.0",
    "pywebview>=6.2.1",
    "striprtf>=0.0.32",
    "trafilatura>=2.1.0",
]
