[project]
name = "hermes"
version = "0.1.0"
description = "Text-to-podcast desktop app for macOS"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "edge-tts>=7.2.8",
    "feedparser>=6.0.12",
    "flask>=3.1.3",
    "kokoro-mlx>=0.1.2",
    "kokoro-onnx>=0.5.0",
    "mammoth>=1.12.0",
    "markdown>=3.10.2",
    "piper-tts>=1.4.2",
    "pymupdf>=1.27.2.3",
    "pysbd>=0.3.4",
    "python-docx>=1.2.0",
    "pywebview>=6.2.1",
    "readability-lxml>=0.8.4.1",
    "striprtf>=0.0.32",
    "trafilatura>=2.1.0",
    "yt-dlp>=2024.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["models", "audio", "extractors", "discovery", "engines"]
